# miniTRUST

./: .gitignore  CMakeLists.txt  README.txt  build_mini.sh  env_mini.sh  update-mini.sh
patches/: fortran.patch  (+3 more)
src/: CMakeLists.txt  obj_lst.cmake
src/Kernel/Champs/: CMakeLists.txt  Champ_Gen_de_Champs_Gen.cpp  Champ_Generique_refChamp.cpp
src/Kernel/Champs/Champs_Don/: CMakeLists.txt
src/Kernel/Champs_dis/: CMakeLists.txt  Champ_Fonc_P0_base.cpp  Champ_Fonc_P1_base.cpp  Champ_Inc_P0_base.cpp  Champ_Inc_P1_base.cpp  Champ_implementation_P0.cpp
src/Kernel/Cond_Lim/: CMakeLists.txt
src/Kernel/Framework/: CMakeLists.txt  Champ_base.cpp  Cond_lim_utilisateur_base.cpp  Discretiser.cpp  Domaine_dis_cache.cpp  Equation_base.cpp  Milieu_base.cpp  MorEqn.cpp  Operateur_base.cpp  Postraitement.cpp  Postraitement.h  Probleme_U.cpp  Probleme_base.cpp  Probleme_base.h  Resoudre.cpp  Sonde.cpp  Sonde.h  Zone_Cl_dis_base.cpp
src/Kernel/Geometrie/: CMakeLists.txt  Domaine.cpp  DomaineCutter.cpp  Faces.cpp  Faces_builder.cpp  Frontiere.cpp  Interprete_geometrique_base.cpp  Mailler.cpp  Scatter.cpp  Sous_Zone.cpp
src/Kernel/Geometrie/Decoupeur/: CMakeLists.txt
src/Kernel/Geometrie/Interpolation_IBM/: CMakeLists.txt
src/Kernel/MEDimpl/: CMakeLists.txt
src/Kernel/Math/: ArrOfDouble.cpp  ArrOf__Scalar__  CMakeLists.txt  Double.h  TRUSTArray.h  TRUSTArray_tools.tpp  TRUSTTab.h  TRUSTTab_compl.tpp
src/Kernel/Math/Matrices/: CMakeLists.txt  Matrice_Morse.cpp  Matrice_Morse_Sym.cpp  Sparskit.cpp
src/Kernel/Math/SolvSys/: CMakeLists.txt  Solv_GCP.cpp
src/Kernel/Operateurs/: CMakeLists.txt
src/Kernel/Schemas_Temps/: CMakeLists.txt  Schema_Euler_Implicite.cpp  Schema_Euler_Implicite.h
src/Kernel/Solveurs/: CMakeLists.txt
src/Kernel/Statistiques_temps/: CMakeLists.txt
src/Kernel/Utilitaires/: CMakeLists.txt  Lire.cpp  Process.cpp  view_utils.h
src/Kernel/VF/Champs/: CMakeLists.txt
src/Kernel/VF/Geometrie/: CMakeLists.txt  Domaine_Poly_tools.h
src/Kernel/VF/Zones/: CMakeLists.txt  EcritureLectureSpecial.cpp  Zone_VF.cpp
src/MAIN/: CMakeLists.txt  mon_main.cpp
src/ThHyd/Dilatable/Common/: CMakeLists.txt
src/ThHyd/Dilatable/Common/Cond_Lim/: CMakeLists.txt
src/ThHyd/Dilatable/Common/Equations/: CMakeLists.txt
src/ThHyd/Dilatable/Common/Milieu/: CMakeLists.txt
src/ThHyd/Dilatable/Common/Problems/: CMakeLists.txt
src/ThHyd/Dilatable/Common/Sources/: CMakeLists.txt
src/ThHyd/Dilatable/Quasi_Compressible/: CMakeLists.txt
src/ThHyd/Dilatable/Quasi_Compressible/Cond_Lim/: CMakeLists.txt
src/ThHyd/Dilatable/Quasi_Compressible/Equations/: CMakeLists.txt
src/ThHyd/Dilatable/Quasi_Compressible/Milieu/: CMakeLists.txt
src/ThHyd/Dilatable/Quasi_Compressible/Problems/: CMakeLists.txt
src/ThHyd/Dilatable/Quasi_Compressible/Sources/: CMakeLists.txt
src/ThHyd/Dilatable/Weakly_Compressible/Equations/: CMakeLists.txt
src/ThHyd/Dilatable/Weakly_Compressible/Milieu/: CMakeLists.txt
src/ThHyd/Dilatable/Weakly_Compressible/Problems/: CMakeLists.txt
src/ThHyd/Dilatable/Weakly_Compressible/Sources/: CMakeLists.txt
src/ThHyd/Incompressible/: CMakeLists.txt
src/ThHyd/Incompressible/Champs/: CMakeLists.txt
src/ThHyd/Incompressible/Cond_Lim/: CMakeLists.txt  Neumann_paroi.cpp
src/ThHyd/Incompressible/Equations/: CMakeLists.txt
src/ThHyd/Incompressible/Milieu/: CMakeLists.txt
src/ThHyd/Incompressible/Problems/: CMakeLists.txt
src/ThHyd/Incompressible/Sources/: CMakeLists.txt
src/ThHyd/Incompressible/Traitement_particulier/: CMakeLists.txt
src/ThHyd/Modele_turbulence_base/: CMakeLists.txt
src/ThHyd/Multiphase/: CMakeLists.txt
src/ThHyd/Multiphase/Correlations/: CMakeLists.txt
src/ThHyd/Multiphase/Equations/: CMakeLists.txt
src/ThHyd/Multiphase/Milieu/: CMakeLists.txt
src/ThHyd/Multiphase/Operateurs/: CMakeLists.txt
src/ThHyd/Multiphase/Schemas_Temps/: CMakeLists.txt  SETS.cpp
src/ThHyd/Multiphase/Sources/: CMakeLists.txt
src/ThHyd/Multiphase/Turbulence/: CMakeLists.txt
src/ThHyd/Schemas_Temps/: CMakeLists.txt
src/ThHyd/Solveurs/: CMakeLists.txt
src/ThHyd/ThermoPhysical_properties_interfaces/: CMakeLists.txt
src/ThHyd/ThermoPhysical_properties_interfaces/CoolProp_to_TRUST/: CMakeLists.txt
src/ThHyd/ThermoPhysical_properties_interfaces/EOS_to_TRUST/: CMakeLists.txt
src/ThHyd/Turbulence/: CMakeLists.txt
src/ThSol/: CMakeLists.txt  Conduction.cpp  Conduction.h
src/VDF/: CMakeLists.txt
src/VDF/Champs/: CMakeLists.txt  Champ_Face.cpp  Champ_Face3.cpp  Champ_Fonc_Face.cpp
src/VDF/Elements/: CMakeLists.txt
src/VDF/Operateurs/Eval_Diff_Dift/: CMakeLists.txt  Eval_Diff_Dift.cpp  Eval_Diff_VDF_Elem.h  Eval_Diff_VDF_Elem.tpp  Eval_Diff_VDF_Elem_leaves.h  Eval_Diff_VDF_Face.h  Eval_Diff_VDF_Face.tpp
src/VDF/Operateurs/Eval_Divers/: CL_Types_include.h  CMakeLists.txt
src/VDF/Operateurs/Iterateurs/: CMakeLists.txt  Iterateur_VDF_base.h  T_It_VDF_Elem.h  T_It_VDF_Elem.tpp  T_It_VDF_Face.h  T_It_VDF_Face.tpp
src/VDF/Operateurs/Op_Diff_Dift/: CMakeLists.txt  Op_Diff_Dift_VDF.h  Op_Diff_VDF_Elem_leaves.cpp  Op_Diff_VDF_Elem_leaves.h  Op_Diff_VDF_Face_leaves.cpp  Op_Diff_VDF_Face_leaves.h
src/VDF/Operateurs/Op_Divers/: CMakeLists.txt  Op_VDF_Elem.cpp  Op_VDF_Face.cpp
src/VDF/Solveurs/: CMakeLists.txt  Masse_VDF_Face.cpp
src/VDF/Sources/: CMakeLists.txt
src/VDF/Sources/Evaluateurs/: CMakeLists.txt
src/VDF/Sources/Iterateurs/: CMakeLists.txt
src/VDF/Sources/Sources_It_Eval/: CMakeLists.txt
src/VDF/Zones/: CMakeLists.txt  VDF_discretisation.cpp  VDF_discretisation.h  Zone_Cl_VDF.cpp  Zone_VDF.cpp
src/VEF/Champs/: CMakeLists.txt
src/VEF/Cond_Lim/: CMakeLists.txt
src/VEF/Geometrie/: CMakeLists.txt
src/VEF/Milieu/: CMakeLists.txt
src/VEF/Operateurs/Op_Conv/: CMakeLists.txt
src/VEF/Operateurs/Op_Diff_Dift/: CMakeLists.txt
src/VEF/Operateurs/Op_Divers/: CMakeLists.txt  Op_Div_VEFP1B_Elem.cpp
src/VEF/Solveurs/: CMakeLists.txt
src/VEF/Sources/: CMakeLists.txt
src/VEF/Sources/PDC/: CMakeLists.txt
src/VEF/Sources/Sources_It_Eval/: CMakeLists.txt
src/VEF/Traitement_particulier/: CMakeLists.txt
(+10 files in other folders)
