add_subdirectory(./ThSol)
add_subdirectory(./ThHyd/Incompressible) ## WTF !!
add_subdirectory(./ThHyd/Incompressible/Cond_Lim) ## WTF !!
add_subdirectory(./Kernel/Champs_dis)
add_subdirectory(./Kernel/Utilitaires)
add_subdirectory(./Kernel/Framework)
add_subdirectory(./Kernel/VF/Zones)
add_subdirectory(./Kernel/Solveurs)
add_subdirectory(./Kernel/Champs)
add_subdirectory(./Kernel/Schemas_Temps)
add_subdirectory(./Kernel/Math)
add_subdirectory(./Kernel/Math/SolvSys)
add_subdirectory(./Kernel/Math/Matrices)
add_subdirectory(./Kernel/Geometrie)
add_subdirectory(./Kernel/Operateurs)
add_subdirectory(./Kernel/Cond_Lim)
add_subdirectory(./MAIN)
add_subdirectory(./VDF)
add_subdirectory(./VDF/Solveurs)
add_subdirectory(./VDF/Sources/Iterateurs)
add_subdirectory(./VDF/Sources/Evaluateurs)
add_subdirectory(./VDF/Sources/Sources_It_Eval)
add_subdirectory(./VDF/Champs)
add_subdirectory(./VDF/Elements)
add_subdirectory(./VDF/Zones)
add_subdirectory(./VDF/Operateurs/Op_Diff_Dift)
add_subdirectory(./VDF/Operateurs/Op_Diff_Dift/Op_Diff_Dift_base)
add_subdirectory(./VDF/Operateurs/Iterateurs)
add_subdirectory(./VDF/Operateurs/Eval_Diff_Dift)
add_subdirectory(./VDF/Operateurs/Eval_Divers)
add_subdirectory(./VDF/Operateurs/Op_Divers)
