add_subdirectory("Kernel/Solveurs")
add_subdirectory("Kernel/Schemas_Temps")
add_subdirectory("Kernel/Geometrie/Decoupeur")
add_subdirectory("Kernel/Geometrie")
add_subdirectory("Kernel/Geometrie/Interpolation_IBM")
add_subdirectory("Kernel/Framework")
add_subdirectory("Kernel/Operateurs")
add_subdirectory("Kernel/Utilitaires")
add_subdirectory("Kernel/Math/SolvSys")
add_subdirectory("Kernel/Math/Matrices")
add_subdirectory("Kernel/Math")
add_subdirectory("Kernel/Champs_dis")
add_subdirectory("Kernel/Statistiques_temps")
add_subdirectory("Kernel/Cond_Lim")
add_subdirectory("Kernel/MEDimpl")
add_subdirectory("Kernel/Champs/Champs_Don")
add_subdirectory("Kernel/Champs")
add_subdirectory("Kernel/VF/Geometrie")
add_subdirectory("Kernel/VF/Champs")
add_subdirectory("MAIN")
add_subdirectory("ThHyd/Solveurs")
add_subdirectory("ThHyd/Schemas_Temps")
add_subdirectory("ThHyd/Incompressible/Problems")
add_subdirectory("ThHyd/Incompressible/Equations")
add_subdirectory("ThHyd/Incompressible/Sources")
add_subdirectory("ThHyd/Incompressible")
add_subdirectory("ThHyd/Incompressible/Traitement_particulier")
add_subdirectory("ThHyd/Incompressible/Cond_Lim")
add_subdirectory("ThHyd/Incompressible/Champs")
add_subdirectory("ThHyd/Incompressible/Milieu")
add_subdirectory("ThHyd/Modele_turbulence_base")
add_subdirectory("ThHyd/Multiphase/Equations")
add_subdirectory("ThHyd/Multiphase/Schemas_Temps")
add_subdirectory("ThHyd/Multiphase/Sources")
add_subdirectory("ThHyd/Multiphase/Correlations")
add_subdirectory("ThHyd/Multiphase")
add_subdirectory("ThHyd/Multiphase/Operateurs")
add_subdirectory("ThHyd/Multiphase/Turbulence")
add_subdirectory("ThHyd/Multiphase/Milieu")
add_subdirectory("ThHyd/Multiphase/Milieu/TPPI")
add_subdirectory("ThHyd/ThermoPhysical_properties_interfaces/CoolProp_to_TRUST")
add_subdirectory("ThHyd/ThermoPhysical_properties_interfaces")
add_subdirectory("ThHyd/ThermoPhysical_properties_interfaces/EOS_to_TRUST")
add_subdirectory("ThHyd/Turbulence")
add_subdirectory("ThHyd/Dilatable/Common/Problems")
add_subdirectory("ThHyd/Dilatable/Common/Equations")
add_subdirectory("ThHyd/Dilatable/Common/Sources")
add_subdirectory("ThHyd/Dilatable/Common")
add_subdirectory("ThHyd/Dilatable/Common/Cond_Lim")
add_subdirectory("ThHyd/Dilatable/Common/Milieu")
add_subdirectory("ThHyd/Dilatable/Weakly_Compressible/Problems")
add_subdirectory("ThHyd/Dilatable/Weakly_Compressible/Equations")
add_subdirectory("ThHyd/Dilatable/Weakly_Compressible/Sources")
add_subdirectory("ThHyd/Dilatable/Weakly_Compressible/Milieu")
add_subdirectory("ThHyd/Dilatable/Quasi_Compressible/Problems")
add_subdirectory("ThHyd/Dilatable/Quasi_Compressible/Equations")
add_subdirectory("ThHyd/Dilatable/Quasi_Compressible/Sources")
add_subdirectory("ThHyd/Dilatable/Quasi_Compressible")
add_subdirectory("ThHyd/Dilatable/Quasi_Compressible/Cond_Lim")
add_subdirectory("ThHyd/Dilatable/Quasi_Compressible/Milieu")
add_subdirectory("ThSol")
add_subdirectory("VEF/Solveurs")
add_subdirectory("VEF/Sources")
add_subdirectory("VEF/Sources/PDC")
add_subdirectory("VEF/Sources/Sources_It_Eval")
add_subdirectory("VEF/Geometrie")
add_subdirectory("VEF/Operateurs/Op_Conv")
add_subdirectory("VEF/Operateurs/Op_Divers")
add_subdirectory("VEF/Operateurs/Op_Diff_Dift")
add_subdirectory("VEF/Traitement_particulier")
add_subdirectory("VEF/Cond_Lim")
add_subdirectory("VEF/Champs")
add_subdirectory("VEF/Milieu")
